refactor: adjust project directory structure, upgrade to Spring Boot 3.4.0, and remove unnecessary files and code.